--- a/earn.html
+++ b/earn.html
@@ -121,6 +121,9 @@
               </div>
               <div class="col-8">
                 <div class="header_menu">
+                  <button class="deposit_btn" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" role="button" aria-controls="offcanvasRight">
+                    Deposit
+                  </button>
                   <div class="dropdown notification">
                     <button class="btn btn-secondary notify_btn" type="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
                       <svg width="24" height="24" viewdiv="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -222,7 +225,7 @@
           <div class="balanceCard_box">
             <div class="row">
               <div class="col-lg-4 mb-4 mb-lg-0">
-                <div class="card_box">
+                <div class="card_simple">
                   <svg id="visual" viewBox="0 0 900 600" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" preserveAspectRatio="none">
                     <rect x="0" y="0" width="900" height="600" fill="#668CD7"></rect>
                     <path d="M0 400L30 386.5C60 373 120 346 180 334.8C240 323.7 300 328.3 360 345.2C420 362 480 391 540 392C600 393 660 366 720 355.2C780 344.3 840 349.7 870 352.3L900 355L900 601L870 601C840 601 780 601 720 601C660 601 600 601 540 601C480 601 420 601 360 601C300 601 240 601 180 601C120 601 60 601 30 601L0 601Z" fill="#4B4C9C" stroke-linecap="round" stroke-linejoin="miter"></path>
@@ -231,7 +234,7 @@
                     <span>Total balance</span>
                     <button class="page_icon">
                       <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24">
-                        <path fill="#FFFFFF" d="M12 6.5c2.76 0 5 2.24 5 5 0 .51-.1 1-.24 1.46l3.06 3.06c1.39-1.23 2.49-2.77 3.18-4.53C21.27 7.11 17 4 12 4c-1.27 0-2.49.2-3.64.57l2.17 2.17c.47-.14.96-.24 1.47-.24zM2.71 3.16c-.39.39-.39 1.02 0 1.41l1.97 1.97C3.06 7.83 1.77 9.53 1 11.5 2.73 15.89 7 19 12 19c1.52 0 2.97-.3 4.31-.82l2.72 2.72c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L4.13 3.16c-.39-.39-1.03-.39-1.42 0zM12 16.5c-2.76 0-5-2.24-5-5 0-.77.18-1.5.49-2.14l1.57 1.57c-.03.18-.06.37-.06.57 0 1.66 1.34 3 3 3 .2 0 .38-.03.57-.07L14.14 16c-.65.32-1.37.5-2.14.5zm2.97-5.33c-.15-1.4-1.25-2.49-2.64-2.64l2.64 2.64z"></path>
+                        <path fill="currentColor" d="M12 6.5c2.76 0 5 2.24 5 5 0 .51-.1 1-.24 1.46l3.06 3.06c1.39-1.23 2.49-2.77 3.18-4.53C21.27 7.11 17 4 12 4c-1.27 0-2.49.2-3.64.57l2.17 2.17c.47-.14.96-.24 1.47-.24zM2.71 3.16c-.39.39-.39 1.02 0 1.41l1.97 1.97C3.06 7.83 1.77 9.53 1 11.5 2.73 15.89 7 19 12 19c1.52 0 2.97-.3 4.31-.82l2.72 2.72c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L4.13 3.16c-.39-.39-1.03-.39-1.42 0zM12 16.5c-2.76 0-5-2.24-5-5 0-.77.18-1.5.49-2.14l1.57 1.57c-.03.18-.06.37-.06.57 0 1.66 1.34 3 3 3 .2 0 .38-.03.57-.07L14.14 16c-.65.32-1.37.5-2.14.5zm2.97-5.33c-.15-1.4-1.25-2.49-2.64-2.64l2.64 2.64z"></path>
                       </svg>
                     </button>
                   </div>
@@ -261,7 +264,7 @@
               <div class="col-lg-4 mb-4 mb-lg-0">
                 <div class="card_simple danger">
                   <div class="page_title">
-                    <span class="dark">Archive Earnings</span>
+                    <span class="dark">Active Earnings</span>
 
                     <div class="d-flex align-items-center">
                       <select name="" class="input_filed me-3 transparent" id="">
@@ -272,12 +275,12 @@
                         <option value="Lifetime">Lifetime</option>
                       </select>
 
-                      <button class="dropdown_btn" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" role="button" aria-controls="offcanvasRight">
+                      <!-- <button class="dropdown_btn" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" role="button" aria-controls="offcanvasRight">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M6 12H18" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                           <path d="M12 18V6" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                         </svg>
-                      </button>
+                      </button> -->
                     </div>
                   </div>
                   <h4 class="amount dark">$1200.00</h4>
