--- a/wallet.html
+++ b/wallet.html
@@ -121,6 +121,9 @@
               </div>
               <div class="col-8">
                 <div class="header_menu">
+                  <button class="deposit_btn" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" role="button" aria-controls="offcanvasRight">
+                    Deposit
+                  </button>
                   <div class="dropdown notification">
                     <button class="btn btn-secondary notify_btn" type="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
                       <svg width="24" height="24" viewdiv="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -222,7 +225,7 @@
           <div class="balanceCard_box">
             <div class="row">
               <div class="col-lg-4 mb-4 mb-lg-0">
-                <div class="card_box">
+                <div class="card_simple">
                   <svg id="visual" viewBox="0 0 900 600" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" preserveAspectRatio="none">
                     <rect x="0" y="0" width="900" height="600" fill="#668CD7"></rect>
                     <path d="M0 400L30 386.5C60 373 120 346 180 334.8C240 323.7 300 328.3 360 345.2C420 362 480 391 540 392C600 393 660 366 720 355.2C780 344.3 840 349.7 870 352.3L900 355L900 601L870 601C840 601 780 601 720 601C660 601 600 601 540 601C480 601 420 601 360 601C300 601 240 601 180 601C120 601 60 601 30 601L0 601Z" fill="#4B4C9C" stroke-linecap="round" stroke-linejoin="miter"></path>
@@ -231,15 +234,14 @@
                     <span>Total balance</span>
                     <button class="page_icon">
                       <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24">
-                        <path fill="#FFFFFF" d="M12 6.5c2.76 0 5 2.24 5 5 0 .51-.1 1-.24 1.46l3.06 3.06c1.39-1.23 2.49-2.77 3.18-4.53C21.27 7.11 17 4 12 4c-1.27 0-2.49.2-3.64.57l2.17 2.17c.47-.14.96-.24 1.47-.24zM2.71 3.16c-.39.39-.39 1.02 0 1.41l1.97 1.97C3.06 7.83 1.77 9.53 1 11.5 2.73 15.89 7 19 12 19c1.52 0 2.97-.3 4.31-.82l2.72 2.72c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L4.13 3.16c-.39-.39-1.03-.39-1.42 0zM12 16.5c-2.76 0-5-2.24-5-5 0-.77.18-1.5.49-2.14l1.57 1.57c-.03.18-.06.37-.06.57 0 1.66 1.34 3 3 3 .2 0 .38-.03.57-.07L14.14 16c-.65.32-1.37.5-2.14.5zm2.97-5.33c-.15-1.4-1.25-2.49-2.64-2.64l2.64 2.64z"></path>
+                        <path fill="currentColor" d="M12 6.5c2.76 0 5 2.24 5 5 0 .51-.1 1-.24 1.46l3.06 3.06c1.39-1.23 2.49-2.77 3.18-4.53C21.27 7.11 17 4 12 4c-1.27 0-2.49.2-3.64.57l2.17 2.17c.47-.14.96-.24 1.47-.24zM2.71 3.16c-.39.39-.39 1.02 0 1.41l1.97 1.97C3.06 7.83 1.77 9.53 1 11.5 2.73 15.89 7 19 12 19c1.52 0 2.97-.3 4.31-.82l2.72 2.72c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L4.13 3.16c-.39-.39-1.03-.39-1.42 0zM12 16.5c-2.76 0-5-2.24-5-5 0-.77.18-1.5.49-2.14l1.57 1.57c-.03.18-.06.37-.06.57 0 1.66 1.34 3 3 3 .2 0 .38-.03.57-.07L14.14 16c-.65.32-1.37.5-2.14.5zm2.97-5.33c-.15-1.4-1.25-2.49-2.64-2.64l2.64 2.64z"></path>
                       </svg>
                     </button>
                   </div>
                   <h4 class="amount">$1200.00</h4>
-
                 </div>
               </div>
-              <div class="col-lg-4 mb-4 mb-lg-0">
+              <!-- <div class="col-lg-4 mb-4 mb-lg-0">
                 <div class="card_simple green">
                   <div class="page_title">
                     <span class="dark">Total Earning</span>
@@ -261,7 +263,7 @@
               <div class="col-lg-4 mb-4 mb-lg-0">
                 <div class="card_simple danger">
                   <div class="page_title">
-                    <span class="dark">Archive Earnings</span>
+                    <span class="dark">Active Earnings</span>
 
                     <div class="d-flex align-items-center">
                       <select name="" class="input_filed me-3 transparent" id="">
@@ -288,89 +290,7 @@
                     <path fill="currentColor" d="M14.88,28.769c-1.735-1.206-4.062-0.415-5.714-2.038c-2.254-2.215-3.382-1.21-3.33-0.238  c0.05,0.972,3.199,4.265,3.199,4.265c-7.128-4.223-2.944-6.464-2.944-6.464c-0.614-2.249-1.483-4.038-2.301-3.732  c-0.818,0.308-0.358,2.608-0.358,2.608c-0.665-3.426-3.017-4.244-2.761-2.454S2.98,31.192,4.944,32.518  c2.943,1.985,6.261,3.639,6.669,4.048c0.409,0.409,2.045,2.045,2.045,2.045l4.856,0.001C17.701,32.932,16.438,29.852,14.88,28.769z" />
                     <path fill="currentColor" d="M32.667,15.057c0-6.443-5.224-11.668-11.667-11.668S9.332,8.613,9.332,15.057c0,6.444,5.224,11.668,11.668,11.668  S32.667,21.501,32.667,15.057z M24.14,20.344c-0.568,0.603-1.403,0.96-2.504,1.071v1.91h-1.229v-1.929  c-0.769-0.087-1.411-0.288-1.928-0.604c-0.517-0.314-1.008-0.714-1.474-1.196l1.584-1.215c0.184,0.174,0.363,0.341,0.538,0.501  c0.173,0.16,0.357,0.301,0.554,0.422c0.195,0.121,0.412,0.216,0.647,0.282c0.236,0.068,0.506,0.103,0.809,0.103  c0.524,0,0.919-0.145,1.186-0.436c0.265-0.29,0.398-0.646,0.398-1.066c0-0.439-0.137-0.818-0.409-1.137  c-0.274-0.318-0.614-0.613-1.02-0.886c-0.407-0.271-0.847-0.541-1.325-0.807c-0.476-0.266-0.919-0.565-1.328-0.899  c-0.411-0.334-0.752-0.72-1.025-1.159c-0.274-0.439-0.41-0.968-0.41-1.586c0-0.421,0.072-0.813,0.215-1.179  c0.145-0.364,0.354-0.693,0.627-0.986c0.273-0.295,0.609-0.538,1.014-0.733c0.402-0.194,0.85-0.322,1.345-0.385V6.789h1.229v1.642  c0.665,0.073,1.233,0.226,1.702,0.454c0.468,0.229,0.921,0.544,1.356,0.946l-1.562,1.27c-0.273-0.29-0.572-0.522-0.897-0.699  c-0.325-0.176-0.713-0.265-1.164-0.265c-0.531,0-0.942,0.134-1.23,0.398c-0.288,0.267-0.432,0.616-0.432,1.049  c0,0.488,0.196,0.919,0.588,1.289c0.256,0.229,0.549,0.431,0.874,0.607c0.325,0.176,0.638,0.354,0.942,0.533  c0.458,0.266,0.882,0.531,1.273,0.797c0.392,0.267,0.728,0.557,1.008,0.871c0.281,0.317,0.501,0.668,0.66,1.054  c0.159,0.387,0.237,0.834,0.237,1.341C24.993,18.985,24.708,19.74,24.14,20.344z" />
                   </svg>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Active balance -->
-          <div class="modal fade" id="activeBalance" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal_header">
-                  <h5>Active Balance</h5>
-                  <button class="modal_close" onclick="handleClose()">
-                    <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24">
-                      <path fill="currentColor" d="M18.3 5.71a.9959.9959 0 0 0-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 0 0-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"></path>
-                    </svg>
-                  </button>
-                </div>
-                <div class="modal_body">
-                  <div style="margin: 0 0.5rem; margin-top: 1px">
-                    <span class="f-secondary fw-500" style="font-size: 14px">Choose your preferred currency</span>
-                  </div>
-
-                  <div class="tabs">
-                    <div class="tab_buttons nav nav-tabs" id="myTab" role="tablist">
-                      <div class="nav-item" role="presentation">
-                        <button class="nav-link active" id="crypto-tab" data-bs-toggle="tab" data-bs-target="#crypto-tab-pane" type="button" role="tab" aria-selected="true">
-                          Crypto
-                        </button>
-                      </div>
-                      <div class="nav-item" role="presentation">
-                        <button class="nav-link" id="fiat-tab" data-bs-toggle="tab" data-bs-target="#fiat-tab-pane" type="button" role="tab" aria-selected="true">
-                          Fiat
-                        </button>
-                      </div>
-                    </div>
-                    <div class="tab-content" id="myTabContent">
-                      <div class="tab-pane fade show active" id="crypto-tab-pane" role="tabpanel" aria-labelledby="crypto-tab" tabindex="0">
-                        <div class="symbol_list">
-                          <div class="drawer_select_item">
-                            <div class="select_symbol">
-                              <img src="./images/avax.svg" class="symbol" />
-                              <div class="symbol_name">
-                                <p>Avax</p>
-                                <span>USDT</span>
-                              </div>
-                            </div>
-
-                            <div class="symbol_price">
-                              <p>12,119.95 USDT</p>
-                              <span>$12,113.24</span>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="tab-pane fade" id="fiat-tab-pane" role="tabpanel" aria-labelledby="fiat-tab" tabindex="-1">
-                        <div class="symbol_list">
-                          <div class="drawer_select_item">
-                            <div class="select_symbol">
-                              <img src="./images/avax.svg" class="symbol" />
-                              <div class="symbol_name">
-                                <p>Brazillian Real</p>
-                                <span>BRL</span>
-                              </div>
-                            </div>
-
-                            <div class="symbol_price">
-                              <p>0.00 BRL</p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="modal_footer d-flex align-content-center justify-content-end">
-                  <button class="boost_btn oulined_primary w-50" data-bs-dismiss="modal">
-                    Cancel
-                  </button>
-                  <button class="boost_btn primary w-50" data-bs-dismiss="modal">
-                    Confirm
-                  </button>
-                </div>
-              </div>
+                </div> -->
             </div>
           </div>
 
@@ -390,9 +310,10 @@
                   </thead>
                   <tbody id="appendData"></tbody>
                 </table>
+                <div class="pagination" id="pagination">
+                  <ul id="numbers"></ul>
+                </div>
               </div>
-              <ul class="pagination" id="pagination"></ul>
-
             </div>
 
             <div class="col-lg-6">
@@ -420,6 +341,7 @@
             </div>
           </div>
         </div>
+
       </div>
     </div>
 
@@ -434,6 +356,88 @@
         <div id="appendRightsidebar"></div>
       </div>
     </div>
+
+    <!-- Active balance -->
+    <div class="modal fade" id="activeBalance" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal_header">
+            <h5>Active Balance</h5>
+            <button class="modal_close" onclick="handleClose()">
+              <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24">
+                <path fill="currentColor" d="M18.3 5.71a.9959.9959 0 0 0-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 0 0-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"></path>
+              </svg>
+            </button>
+          </div>
+          <div class="modal_body">
+            <div style="margin: 0 0.5rem; margin-top: 1px">
+              <span class="f-secondary fw-500" style="font-size: 14px">Choose your preferred currency</span>
+            </div>
+
+            <div class="tabs">
+              <div class="tab_buttons nav nav-tabs" id="myTab" role="tablist">
+                <div class="nav-item" role="presentation">
+                  <button class="nav-link active" id="crypto-tab" data-bs-toggle="tab" data-bs-target="#crypto-tab-pane" type="button" role="tab" aria-selected="true">
+                    Crypto
+                  </button>
+                </div>
+                <div class="nav-item" role="presentation">
+                  <button class="nav-link" id="fiat-tab" data-bs-toggle="tab" data-bs-target="#fiat-tab-pane" type="button" role="tab" aria-selected="true">
+                    Fiat
+                  </button>
+                </div>
+              </div>
+              <div class="tab-content" id="myTabContent">
+                <div class="tab-pane fade show active" id="crypto-tab-pane" role="tabpanel" aria-labelledby="crypto-tab" tabindex="0">
+                  <div class="symbol_list">
+                    <div class="drawer_select_item">
+                      <div class="select_symbol">
+                        <img src="./images/avax.svg" class="symbol" />
+                        <div class="symbol_name">
+                          <p>Avax</p>
+                          <span>USDT</span>
+                        </div>
+                      </div>
+
+                      <div class="symbol_price">
+                        <p>12,119.95 USDT</p>
+                        <span>$12,113.24</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="tab-pane fade" id="fiat-tab-pane" role="tabpanel" aria-labelledby="fiat-tab" tabindex="-1">
+                  <div class="symbol_list">
+                    <div class="drawer_select_item">
+                      <div class="select_symbol">
+                        <img src="./images/avax.svg" class="symbol" />
+                        <div class="symbol_name">
+                          <p>Brazillian Real</p>
+                          <span>BRL</span>
+                        </div>
+                      </div>
+
+                      <div class="symbol_price">
+                        <p>0.00 BRL</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="modal_footer d-flex align-content-center justify-content-end">
+            <button class="boost_btn oulined_primary w-50" data-bs-dismiss="modal">
+              Cancel
+            </button>
+            <button class="boost_btn primary w-50" data-bs-dismiss="modal">
+              Confirm
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
     <!-- Reeem modal -->
     <div class="modal fade" id="redeemModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -648,7 +652,7 @@
 
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Swap</a></li>
-                    <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Earm</a></li>
+                    <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#earnModal">Earn</a></li>
                     <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#redeemModal">Redeem</a></li>
                   </ul>
                 </div>
