--- a/faq.html
+++ b/faq.html
@@ -25,6 +25,60 @@
 
     </div>
 
+
+    <ul class='help_box d-none' id="help_box">
+      <li class='help_item'>
+        <a href='#'>
+          <div class='help_icon'>
+            <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24" data-testid="RocketLaunchIcon">
+              <path fill="currentColor" d="M9.19 6.35c-2.04 2.29-3.44 5.58-3.57 5.89L2 10.69l4.05-4.05c.47-.47 1.15-.68 1.81-.55l1.33.26zM11.17 17s3.74-1.55 5.89-3.7c5.4-5.4 4.5-9.62 4.21-10.57-.95-.3-5.17-1.19-10.57 4.21C8.55 9.09 7 12.83 7 12.83L11.17 17zm6.48-2.19c-2.29 2.04-5.58 3.44-5.89 3.57L13.31 22l4.05-4.05c.47-.47.68-1.15.55-1.81l-.26-1.33zM9 18c0 .83-.34 1.58-.88 2.12C6.94 21.3 2 22 2 22s.7-4.94 1.88-6.12C4.42 15.34 5.17 15 6 15c1.66 0 3 1.34 3 3zm4-9c0-1.1.9-2 2-2s2 .9 2 2-.9 2-2 2-2-.9-2-2z"></path>
+            </svg>
+          </div>
+          <span>Getting Started</span>
+        </a>
+      </li>
+      <li class='help_item'>
+        <a href='#'>
+          <div class='help_icon'>
+            <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24" data-testid="AutoAwesomeIcon">
+              <path fill="currentColor" d="m19 9 1.25-2.75L23 5l-2.75-1.25L19 1l-1.25 2.75L15 5l2.75 1.25L19 9zm-7.5.5L9 4 6.5 9.5 1 12l5.5 2.5L9 20l2.5-5.5L17 12l-5.5-2.5zM19 15l-1.25 2.75L15 19l2.75 1.25L19 23l1.25-2.75L23 19l-2.75-1.25L19 15z"></path>
+            </svg>
+          </div>
+          <span>Our Features</span>
+        </a>
+      </li>
+      <li class='help_item'>
+        <a href='#'>
+          <div class='help_icon'>
+            <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24" data-testid="PriceCheckIcon">
+              <path fill="currentColor" d="M12 13V9c0-.55-.45-1-1-1H7V6h5V4H9.5V3h-2v1H6c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1h4v2H5v2h2.5v1h2v-1H11c.55 0 1-.45 1-1zm7.59-.48-5.66 5.65-2.83-2.83-1.41 1.42L13.93 21 21 13.93z"></path>
+            </svg>
+          </div>
+          <span>Payments</span>
+        </a>
+      </li>
+      <li class='help_item'>
+        <a href='#'>
+          <div class='help_icon'>
+            <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24" data-testid="LocalLibraryIcon">
+              <path fill="currentColor" d="M12 11.55C9.64 9.35 6.48 8 3 8v11c3.48 0 6.64 1.35 9 3.55 2.36-2.19 5.52-3.55 9-3.55V8c-3.48 0-6.64 1.35-9 3.55zM12 8c1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3 1.34 3 3 3z"></path>
+            </svg>
+          </div>
+          <span>Learn Crypto</span>
+        </a>
+      </li>
+      <li class='help_item'>
+        <a href='#'>
+          <div class='help_icon'>
+            <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24" data-testid="LinearScaleIcon">
+              <path fill="currentColor" d="M19.5 9.5c-1.03 0-1.9.62-2.29 1.5h-2.92c-.39-.88-1.26-1.5-2.29-1.5s-1.9.62-2.29 1.5H6.79c-.39-.88-1.26-1.5-2.29-1.5C3.12 9.5 2 10.62 2 12s1.12 2.5 2.5 2.5c1.03 0 1.9-.62 2.29-1.5h2.92c.39.88 1.26 1.5 2.29 1.5s1.9-.62 2.29-1.5h2.92c.39.88 1.26 1.5 2.29 1.5 1.38 0 2.5-1.12 2.5-2.5s-1.12-2.5-2.5-2.5z"></path>
+            </svg>
+          </div>
+          <span>Other</span>
+        </a>
+      </li>
+    </ul>
+
     <script>
       const faq = [
         {
