--- a/index.html
+++ b/index.html
@@ -72,6 +72,20 @@
                 <span>Transactions</span>
               </a>
             </li>
+            <li class="menu_item">
+              <a href="./exchange.html">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <g opacity="0.4">
+                    <path d="M20.5002 14.9902L15.4902 20.0102" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                    <path d="M3.5 14.9902H20.5" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                  </g>
+                  <path d="M3.5 9.01023L8.51 3.99023" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                  <path d="M20.5 9.00977H3.5" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+
+                <span>Exchange</span>
+              </a>
+            </li>
 
             <li class="btn_mobile_plus">
               <button data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" role="button" aria-controls="offcanvasRight">
