--- a/profile.html
+++ b/profile.html
@@ -59,7 +59,7 @@
             </li>
 
             <li class="menu_item">
-              <a href="/transaction.html">
+              <a href="./transaction.html">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <g opacity="0.4">
                     <path d="M3.58008 5.16016H17.4201C19.0801 5.16016 20.4201 6.50016 20.4201 8.16016V11.4802" stroke="currentColor" strokeWidth="1.5" strokeMiterlimit="10" strokeLinecap="round" strokeLinejoin="round" />
@@ -69,6 +69,20 @@
                   <path d="M17.2598 22.0002L20.4198 18.8402L17.2598 15.6802" stroke="currentColor" strokeWidth="1.5" strokeMiterlimit="10" strokeLinecap="round" strokeLinejoin="round" />
                 </svg>
                 <span>Transactions</span>
+              </a>
+            </li>
+            <li class="menu_item">
+              <a href="./exchange.html">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <g opacity="0.4">
+                    <path d="M20.5002 14.9902L15.4902 20.0102" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                    <path d="M3.5 14.9902H20.5" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                  </g>
+                  <path d="M3.5 9.01023L8.51 3.99023" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                  <path d="M20.5 9.00977H3.5" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+
+                <span>Exchange</span>
               </a>
             </li>
 
